# JEEDZ-Bot

./: Cargo.toml  README.md
src/: log.txt  main.rs
src/commands/: schedule.rs
src/events/: greetings.rs
src/google/: auth.rs  calendar.rs  mod.rs
src/tasks/: mod.rs  network.rs  soc.rs
